kubernetes/prod/firefly/firefly-iii/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly
  labels:
    app: firefly-iii
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      restartPolicy: Always
      containers:
      - image: fireflyiii/core
        name: firefly-iii
        ports:
        - containerPort: 8080
          protocol: TCP
          name: firefly-iii
        volumeMounts:
        - mountPath: "/var/www/html/storage/upload"
          name: firefly-iii-upload 
      volumes:
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload
