kubernetes/prod/firefly/firefly-iii/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: firefly
  labels:
    app: firefly-iii
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: firefly-iii
