kubernetes/prod/firefly/firefly-iii/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: firefly-iii
    app.kubernetes.io/name: firefly-iii
  name: firefly-iii
  namespace: firefly
spec:
  ingressClassName: traefik
  rules:
  - host: budget.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: firefly-iii
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - budget.nmoura.pt
    secretName: kube-system/nmoura-pt-tls
